feat(exhibition)：优化展览角色皮肤选择与界面透视布局。